--- a/test.html
+++ b/test.html
@@ -100,6 +100,9 @@
       <a href="header.svg">
         <img src="header.svg" width="320" height="200" alt="Click to see the source" style="max-width: 100%;">
       </a>
+      <a href="/competitive-programming/">
+        <img src="_files/competitive-programming.svg" width="200" height="200" alt="Click to see the source" style="max-width: 100%;">
+      </a>
       <img src="15/demo.svg" width="320" height="200" alt="Click to see the source" style="max-width: 100%;">
     </div>
 
