--- a/test.html
+++ b/test.html
@@ -97,13 +97,12 @@
       </div>
     </div>
     <article class="markdown-body entry-content container-lg f5" itemprop="text"><div align="left" dir="auto">
-      <a href="header.svg">
-        <img src="header.svg" width="320" height="200" alt="Click to see the source" style="max-width: 100%;">
-      </a>
       <a href="/competitive-programming/">
         <img src="_files/competitive-programming.svg" width="200" height="200" alt="Click to see the source" style="max-width: 100%;">
       </a>
-      <img src="15/demo.svg" width="320" height="200" alt="Click to see the source" style="max-width: 100%;">
+      <a href="header.svg">
+        <img src="_files/15.svg" width="200" height="200" alt="Click to see the source" style="max-width: 100%;">
+      </a>
     </div>
 
     </article>
